tests/sumo/pedestrian_model/striping/errors/disconnected_trip/errors.sumo
Warning: No connection between edge 'SC' and edge 'CW' found.
Error: No connection found between edge 'SC' and edge 'CW' for person 'p0'.
Quitting (on error).
